--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,6 +1,6 @@
 .topNav {
     overflow: hidden;
-     background-color: rgb(255, 140, 0);
+     background-color: rgb(255, 0, 0);
    
     padding: 14px 16px;
     font-size: large;
@@ -30,11 +30,19 @@
     
     
 }
+.topnav-right .Elements .userName{
+    margin-right: 50px;
+}
 .topnav-right .Elements  a:hover{
     background-color: aliceblue;
 }
- 
 
 
-  
+
+.topnav-right .logOut {
+    cursor: pointer;
+    margin-top: 10px;
+} 
+
+
    
