--- a/src/Styles/Create-form.css
+++ b/src/Styles/Create-form.css
@@ -3,12 +3,12 @@
     text-align: center;
     height: 70%;
     background-color:  rgb(255, 140, 0);
-     margin-left:   30%;
-     margin-right: 30%;
-     margin-top: 5%;
+      
      padding:10px 50px;
      border-radius: 10px;
-     
+     margin-left: 50%;
+     width: 500px;
+     margin-top: 20%;
 
 
 }
