--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,29 +1,19 @@
 .topNav {
     overflow: hidden;
-     background-color: rgb(255, 0, 0);
-   
+     background-color: rgb(246, 178, 178);
+    width: 20%;
     padding: 14px 16px;
     font-size: large;
+    height: 700px;
+    position: fixed;
+   
   }
   
-.topnav-right{
-    float: right;
-    display: flex;
 
-}
-.topnav-left{
-     float: left;
-     margin-top: 12px;
-}
-.topnav-right .Elements  {
-   
-    margin-top: 10px;
-    justify-content: center;
-   
 
-}
 .topnav-right .Elements  a {
     color: black;
+    display: block;
     text-decoration: none;
     padding: 10px 16px !important;
     border-radius: 20px;
