--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,28 +1,35 @@
 .topNav {
     overflow: hidden;
-     background-color: rgb(246, 178, 178);
+     background-color: rgb(239, 236, 236);
     width: 20%;
-    padding: 14px 16px;
+    /* padding: 0 16px; */
     font-size: large;
-    height: 700px;
+    height: 100%;
     position: fixed;
+    
    
   }
   
 
 
-.topnav-right .Elements  a {
+.topnav-right .Elements  a,.logOut {
     color: black;
     display: block;
     text-decoration: none;
     padding: 10px 16px !important;
     border-radius: 20px;
-    
+    margin-bottom: 20px;
+    font-family: 'Fira Sans', sans-serif;
+     
+    font-weight: 900;
     
 }
-.topnav-right .Elements .userName{
+.Elements {
+    margin-top: 20px;
+}
+/* .topnav-right .Elements .userName{
     margin-right: 50px;
-}
+} */
 .topnav-right .Elements  a:hover{
     background-color: aliceblue;
 }
@@ -35,4 +42,44 @@
 } 
 
 
+.topnav-left {
    
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-family: 'Marck Script', cursive;
+    text-align: center;
+}
+
+.topnav-right .ProfileComponent{
+    text-align: center;
+     
+}
+
+.topnav-right .ProfileComponent .userName{
+    font-family: 'Fira Sans', sans-serif;
+    display:block;
+    font-weight: 900;
+}
+
+.topnav-right .ProfileComponent .UserId {
+    font-family: 'Fira Sans', sans-serif;
+    
+}
+
+.topnav-right .ProfileComponent .UserDetails{
+    display: flex;
+    justify-content: center;
+    gap:15px;
+    margin-top: 15px;
+}
+
+.topnav-right .name{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: medium;
+}
+
+ .ProfileComponent {
+    border-bottom: 2px solid rgb(208, 206, 206);
+   
+ }
+
