--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -1,6 +1,6 @@
 .topNav {
     overflow: hidden;
-     background-color: rgb(239, 236, 236);
+     background-color: rgb(243, 243, 243);
     width: 20%;
     /* padding: 0 16px; */
     font-size: large;
@@ -17,7 +17,7 @@
     display: block;
     text-decoration: none;
     padding: 10px 16px !important;
-    border-radius: 20px;
+    /* border-radius: 20px; */
     margin-bottom: 20px;
     font-family: 'Fira Sans', sans-serif;
      
@@ -80,6 +80,13 @@
 
  .ProfileComponent {
     border-bottom: 2px solid rgb(208, 206, 206);
+    padding-bottom: 20px;
    
  }
+.active {
+    border-left: 2px solid red;
+    border-width: 5px;
+     
+}
 
+ 
