--- a/src/Styles/profile.css
+++ b/src/Styles/profile.css
@@ -1,8 +1,16 @@
 .Profile{
     margin-left: 30%;
+    margin-top: 40px;
     
 }
-
+.topBar{
+    display: flex;
+    margin-bottom: 40px;
+  
+  
+     /* justify-content: center; */
+    
+}
 .components{
     
     display: flex;
@@ -10,4 +18,20 @@
     font-size: larger;
 }
 
+.profilePic{
+    width: 150px;
+    display: block;
+}
+.profileDetails{
+    display: flex;
+    gap:25px;
+     margin-top: 30px;
+    
+      
+}
+ 
+.profileDetails .name{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: medium;
+}
  
