--- a/src/Styles/Friends.css
+++ b/src/Styles/Friends.css
@@ -1,6 +1,23 @@
-.Profile1{
-    display: inline;
-}
+ 
 .friend{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    gap:10px;
+    border-bottom: 1px solid black;
+    justify-content: space-between;
+     
+    
 }
+
+.friendLeft{
+    display: flex;
+    text-align: center;
+}
+ .profileName  {
+    margin-top: 7px;
+    margin-left: 10px;
+ }
+
+.friend .followCheck .FollowButton{
+    margin-top:2px;
+ }
