--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -1,3 +1,31 @@
-.MainPage{
-    margin-left: 30%;
+.MainPage {
+    margin-left: 26%;
+    /* background-color: white; */
+    background-color: rgb(243, 243, 243);
+    display: flex;
+    justify-content: space-between;
+
 }
+
+.MainPage .allPosts .MainPageHeading{
+    font-family: 'Fira Sans', sans-serif;
+    font-weight:900;
+   font-size:x-large;
+}
+
+ .sideBarPost{
+    display: inline;
+    margin-left: 45%;
+    position: fixed;
+    top:0 ;
+    float: right;
+ }
+
+ .sideBarPost .MiniProfile{
+    margin-top: 20px;
+    display: flex;
+ }
+
+ .sideBarPost .MiniProfile .miniProfilePic{
+    margin-top: 50px;
+ }
