--- a/src/Styles/Comment.css
+++ b/src/Styles/Comment.css
@@ -4,6 +4,7 @@
  
 .commentIcon{
     margin-top: 1px;
+    background-color: white;
     
 }
 
@@ -18,6 +19,7 @@
 .commentButton{
     border:none;
     vertical-align: middle;
+    background-color: white;
 }
 
 
@@ -30,7 +32,7 @@
 
 .Showtext{
     cursor: pointer;
-    display: inline-block
+    display: inline-block;
 }
 
 .SingleComment{
@@ -50,4 +52,9 @@
 
 .UserComment{
     font-weight: 100;
+}
+
+.commentBox .CommentInput{
+    background-color: rgb(246, 240, 240);
+    border: 0.5px solid rgb(139, 136, 136);
 }
