--- a/src/Styles/CreatePost.css
+++ b/src/Styles/CreatePost.css
@@ -1,5 +1,7 @@
 .CreatePostPage{
-    margin-left: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     background-color: rgb(243,243,243);
     height:100vh;
 }
