--- a/src/Styles/Friends.css
+++ b/src/Styles/Friends.css
@@ -1,4 +1,6 @@
- 
+.FriendsAll{
+    /* background-color: rgb(243,243,243); */
+} 
 .friend{
     margin-bottom: 10px;
     display: flex;
@@ -21,3 +23,4 @@
 .friend .followCheck .FollowButton{
     margin-top:2px;
  }
+
