--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -1,5 +1,6 @@
 .MainPage {
-    margin-left: 26%;
+    margin-left: 35%;
+    /* margin-top: 15%; */
     /* background-color: white; */
     background-color: rgb(243, 243, 243);
     display: flex;
@@ -7,25 +8,89 @@
 
 }
 
+
 .MainPage .allPosts .MainPageHeading{
     font-family: 'Fira Sans', sans-serif;
     font-weight:900;
    font-size:x-large;
 }
 
- .sideBarPost{
+.sideBarPost{
     display: inline;
     margin-left: 45%;
     position: fixed;
     top:0 ;
     float: right;
+    width: 600px;
+    
  }
 
  .sideBarPost .MiniProfile{
     margin-top: 20px;
+    
     display: flex;
  }
 
  .sideBarPost .MiniProfile .miniProfilePic{
     margin-top: 50px;
+    text-align: center;
  }
+
+ @media only screen  and (max-width: 1380px){
+   .sideBarPost{
+      display: none;
+   }
+   .MainPage{
+      margin-left: 35%;
+      margin-right: 50%;
+   }
+}
+
+@media (max-width: 1030px){
+   .MainPage{
+       margin-left:auto;
+       margin-right:auto;
+       display: block;
+       margin-top: 9%;
+   }
+}
+
+
+@media (max-width: 500px){
+   .MainPage{
+       /* margin-left:5%;
+       /* margin-right: 10%; */
+       margin-top: 15%;
+       margin-left:auto;
+       margin-right:auto;
+       display: block;
+   }
+   .PostImage {
+      width: 300px;
+      border-radius: 3%;
+      height: 200px;
+}
+}
+
+@media (max-width:640px) and (min-width:500px){
+   .PostImage{
+      width: 470px;
+   }
+}
+.MiniProfile .miniProfileUserDetails{
+   display: flex;
+   gap:20px;
+   margin-top: 14%;
+   margin-left: 10%;
+}
+
+.MiniProfile .miniProfileUserDetails  .name{
+   font-family: 'Fira Sans', sans-serif;
+
+}
+
+.MiniProfile .miniProfileUserDetails .following .name{
+   font-weight: 900;
+   font-family: 'Fira Sans', sans-serif;
+
+}
