--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -90,4 +90,78 @@
      
 }
 
+.barAtTop{
+    display: none;
+}
+
+
+@media (max-width: 1030px){
+    .barAtTop{
+        display: inline ;
+         position: fixed;
+        width: 100% !important;
+        height: auto;
+        
+    }
+    .topNav{
+        display: none;
+    }
+
+}
+
  
+ 
+/* for barAttop small size */
+ 
+
+.barAtTop .barAtTopChild{
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(184, 179, 179);
+}
+
+.dropbtn {
+    background-color: rgb(158, 158, 158);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+
+  .barAtTopChild .leftSide{
+    display: flex;
+    align-items: center;
+    gap:20px;
+  }
