create post changes

--- a/src/Styles/Create-form.css
+++ b/src/Styles/Create-form.css
@@ -25,6 +25,9 @@
     .createPost .PostForm .userNameProfile .rightEnd{
         width : 100%;
     }
+    .PostForm .title{
+        width: 150px;
+    }
 }
 
 /* .PostForm{ */
